Fixes skill specialties spacing issues.

--- a/src/scss/components/_skill-specialties.scss
+++ b/src/scss/components/_skill-specialties.scss
@@ -3,9 +3,9 @@
     align-items: flex-start;
     grid-template-columns: min-content 1fr;
     width: 100%;
-    gap: 0.25rem 0.75rem;
+    gap: 0.275rem 0.75rem;
     margin: 0;
-    font-family: var(--a5e-font-primary);
+    font-family: var(--a5e-primary-font);
     font-size: var(--a5e-sm-text);
 
     &__list {
@@ -22,6 +22,8 @@
         padding: 0;
         margin: 0;
         color: var(--a5e-text-color-dark);
+        height: var(--a5e-sm-text); /* Override Foundry default*/
+        min-height: auto; /* Override Foundry default*/
         line-height: 1;
         white-space: nowrap;
         background: transparent;
